<resources>
    <string name="app_name">Scheduler</string>
    <string name="action_settings">Settings</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="week">Week</string>
    <string name="group_choose_summary">Here you can choose your group</string>
    <string name="group_choose_title">Choose group</string>
    <string name="pre_title_feedback">Leave feedback</string>
    <string name="pre_summary_feedback">Write an email to the developer</string>
    <string name="time_settings_title">Schedule editor</string>
    <string name="time_settings_summary">Tap here to edit your schedules</string>
    <string name="schedule_settings">Schedule editor</string>
    <!--<string name="title_activity_login">Sign in</string>-->

    <!-- Strings related to RecyclerView -->
    <string name="time_progress">00</string>
    <string name="lesson_number">1</string>

    <!-- Strings related to login -->
    <!--<string name="prompt_email">Email</string>-->
    <!--<string name="prompt_password">Password</string>-->
    <string name="sign_out">Sign out</string>
    <string name="sign_out_summary">Press here to sign out from your account</string>
    <string name="lessons_pref_category">Schedule and lessons</string>
    <string name="account_pref_category">Account</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="sign_in_failed">Google sign in failed, tray again later</string>
    <string name="auth_failed">Authentication Failed.</string>

    <string name="welcome_text">Welcome to Scheduler! Let\'s setup it for you</string>
    <string name="welcome_text2">First, sign in with your Google account</string>

    <!-- ChooseSettings activity -->
    <string name="greeting_text">"Hi, "</string>
    <string name="search_schedule_text">Searching for existing schedule…</string>
    <string name="no_schedule_text">No saved schedule</string>
    <string name="load_existing_button">Load</string>
    <string name="load_existing_schedule">You can load your previous schedule</string>
    <string name="create_own_schedule">Create new</string>
    <string name="search_group_in_db">Search in database</string>

    <!-- Strings related to FirstSetting activity-->
    <string name="search_here">Search here</string>
    <string name="go_ahead">Go ahead</string>
    <string name="go_back">Go back</string>
    <string name="choose_university">Choose university</string>
    <string name="choose_group">Choose group</string>
    <string name="choose_department">Choose department</string>

    <!-- Strings related to WeekActivity activity-->
    <string name="choose_week_count">How many different weeks do you have?</string>


    <!-- Strings related to ScheduleSettings activity-->
    <string name="empty_fields">Fields cannot be empty</string>
    <string name="start_field_empty">First, indicate the beginning of the lesson</string>
    <string name="saved_data">Timetable successfully saved</string>
    <string name="lesson">Lesson</string>
    <string name="lesson_start">Start</string>
    <string name="lesson_end">End</string>
    <string name="add_new_time">Add new</string>
    <string name="save_timetable">Save</string>
    <string name="done">Done</string>

    <!-- Strings related to dialog window-->
    <string name="teacher">Teacher</string>
    <string name="room">Room</string>
    <string name="cancel">Cancel</string>
    <string name="subject">Subject</string>
    <string name="ok">OK</string>
    <string name="exit_confirm">Exit without saving?</string>
    <string name="group">Group</string>
    <string name="menu_refresh">Refresh</string>
    <string name="group_question_text">It\'s time to choose</string>

    <!--Shared preferences-->
    <string name="common_preferences" translatable="false">commonPrefs</string>
    <string name="database_type" translatable="false">databaseType</string>
    <string name="university_name" translatable="false">universityName</string>
    <string name="department_name" translatable="false">departmentName</string>
    <string name="group_name" translatable="false">groupName</string>
    <string name="setup_stage" translatable="false">setupStage</string>
    <string name="week_count" translatable="false">weekCount</string>
    <string name="current_week" translatable="false">currentWeek</string>
    <string name="title_activity_week" translatable="false">WeekActivity</string>


</resources>
