<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.scheduler.firstSetting.SetupActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/background_grey"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/app_name">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <Button
        android:id="@+id/go_ahead"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/blue_button_selector"
        android:textColor="@color/white"
        android:fontFamily="@font/product_sans_regular"
        android:text="@string/go_ahead"
        app:layout_anchor="@+id/container"
        app:layout_anchorGravity="right|bottom" />

    <Button
        android:id="@+id/go_back"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_gravity="start|bottom"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/cancel_button_selector"
        android:fontFamily="@font/product_sans_regular"
        android:text="@string/go_back"
        app:layout_anchor="@+id/container"
        app:layout_anchorGravity="left|bottom" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>
