<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view"
    android:layout_width="match_parent"
    android:layout_height="108dp"
    android:background="@drawable/background"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">


    <TextView
        android:id="@+id/lesson_number"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/circle_background_blue"
        android:elevation="4dp"
        android:fontFamily="@font/product_sans_regular"
        android:padding="9dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/lesson_number"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorAccent"
        android:textIsSelectable="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/teacher_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subject_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        android:text="@string/lesson"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textIsSelectable="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/teacher_name"
        app:layout_constraintEnd_toStartOf="@+id/left_time"
        app:layout_constraintStart_toEndOf="@+id/lesson_number"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/teacher_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        android:text="@string/teacher"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lesson_number" />

    <TextView
        android:id="@+id/room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        android:minWidth="55dp"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        android:text="@string/room"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="00" />

    <ProgressBar
        android:id="@+id/lesson_progress"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/progressbar_background"
        android:elevation="6dp"
        android:indeterminate="false"
        android:max="100"
        android:progress="0"
        android:progressDrawable="@drawable/progressbar"
        android:secondaryProgress="100"
        app:layout_constraintBottom_toTopOf="@+id/room"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/left_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="6dp"
        android:paddingStart="19dp"
        android:paddingTop="5dp"
        android:paddingEnd="19dp"
        android:paddingBottom="6dp"
        android:text="@string/time_progress"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/lesson_progress"
        app:layout_constraintEnd_toEndOf="@+id/lesson_progress"
        app:layout_constraintStart_toStartOf="@+id/lesson_progress"
        app:layout_constraintTop_toTopOf="@+id/lesson_progress" />


</androidx.constraintlayout.widget.ConstraintLayout>